--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
+      }
 
+      .btn-primary{
+        margin-right: 10px;
       }
     </style>
   </head>
@@ -93,6 +96,17 @@
             id="exampleInputEmail1"
             aria-describedby="emailHelp"
           />
+        </div>
+        <div class="input-group mb-3">
+          <label class="input-group-text" for="inputGroupSelect01">Stars</label>
+          <select class="form-select" id="inputGroupSelect01">
+            <option selected>---select a rating --</option>
+            <option value="1">⭐</option>
+            <option value="2">⭐⭐</option>
+            <option value="3">⭐⭐⭐</option>
+            <option value="4">⭐⭐⭐⭐</option>
+            <option value="5">⭐⭐⭐⭐⭐</option>
+          </select>
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">COMMENT</label>
